--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -23,7 +23,7 @@ header {
 
     h1 {
       color: var(--gray-6);
-      font-size: 1.25rem;
+      font-size: var(--large-font-size);
       margin: 0;
     }
   }
