--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,6 +16,7 @@ $large-breakpoint: 38rem;
   --root-line-height: 1.5;
   --large-font-size: 1.25rem;
   --large-breakpoint: #{$large-breakpoint};
+  --small-font-size: .85rem;
 
   --gray-m: #767676;
   --gray-1: #f9f9f9;
