Update font loading

--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -4,8 +4,7 @@
   font-style: normal;
   font-weight: 400;
   src:
-    url(/css/fonts/Bitter/Bitter-Regular.woff2) format("woff2"),
-    url(/css/fonts/Bitter/Bitter-Regular.woff) format("woff");
+    url(/css/fonts/Bitter/Bitter-Regular.woff2) format("woff2");
 }
 
 @font-face {
@@ -14,8 +13,7 @@
   font-style: normal;
   font-weight: 400;
   src:
-    url(/css/fonts/Bitter/Bitter-Italic.woff2) format("woff2"),
-    url(/css/fonts/Bitter/Bitter-Italic.woff) format("woff");
+    url(/css/fonts/Bitter/Bitter-Italic.woff2) format("woff2");
 }
 
 @font-face {
@@ -24,8 +22,7 @@
   font-style: normal;
   font-weight: 700;
   src:
-    url(/css/fonts/Bitter/Bitter-Bold.woff2) format("woff2"),
-    url(/css/fonts/Bitter/Bitter-Bold.woff) format("woff");
+    url(/css/fonts/Bitter/Bitter-Bold.woff2) format("woff2");
 }
 
 @font-face {
@@ -34,8 +31,7 @@
   font-style: normal;
   font-weight: 700;
   src:
-    url(/css/fonts/Bitter/Bitter-BoldItalic.woff2) format("woff2"),
-    url(/css/fonts/Bitter/Bitter-BoldItalic.woff) format("woff");
+    url(/css/fonts/Bitter/Bitter-BoldItalic.woff2) format("woff2");
 }
 
 @font-face {
@@ -44,8 +40,7 @@
   font-style: normal;
   font-weight: 700;
   src:
-    url(/css/fonts/Open-Sans/OpenSans-Bold.woff2) format("woff2"),
-    url(/css/fonts/Open-Sans/OpenSans-Bold.woff) format("woff");
+    url(/css/fonts/Open-Sans/OpenSans-Bold.woff2) format("woff2");
 }
 
 @font-face {
@@ -54,8 +49,7 @@
   font-style: normal;
   font-weight: 600;
   src:
-    url(/css/fonts/Open-Sans/OpenSans-Semibold.woff2) format("woff2"),
-    url(/css/fonts/Open-Sans/OpenSans-Semibold.woff) format("woff");
+    url(/css/fonts/Open-Sans/OpenSans-Semibold.woff2) format("woff2");
 }
 
 @font-face {
@@ -64,6 +58,5 @@
   font-style: normal;
   font-weight: 400;
   src:
-    url(/css/fonts/Inconsolata/Inconsolata.woff2) format("woff2"),
-    url(/css/fonts/Inconsolata/Inconsolata.woff) format("woff");
+    url(/css/fonts/Inconsolata/Inconsolata.woff2) format("woff2");
 }
