Add _config reference

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -69,8 +69,8 @@
   {% endif %}
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@allthingssmitty">
-  <meta name="twitter:creator" content="@allthingssmitty">
+  <meta name="twitter:site" content="@{{ site.brand }}">
+  <meta name="twitter:creator" content="@{{ site.brand }}">
   
   {% if page.url %}
     <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
