Reduce declarations for common properties

--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -16,6 +16,7 @@
   font-family: var(--secondary-font-family-semibold);
   padding: 1rem;
   text-align: center;
+  text-decoration: none;
   width: 50%;
 
   &:only-child {
