--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -11,11 +11,6 @@ header {
       
   a {
     color: inherit;
-  
-    &:hover {
-      color: var(--link-color);
-      text-decoration: none;
-    }
   }
 
   .tagline {
@@ -27,14 +22,22 @@ header {
 }
 
 nav {
-    display: flex;
+  display: flex;
 
-    h1 {
-      color: var(--gray-6);
-      font-size: var(--large-font-size);
-      margin: 0;
-    }
+  h1 {
+    color: var(--gray-6);
+    font-size: var(--large-font-size);
+    margin: 0;
+  }
   
+  a {
+    color: inherit;
+    text-decoration: none;
+  
+    &:hover {
+      color: var(--link-color);
+    }
+  }
 
   ul {
     list-style: none;
