--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -6,22 +6,23 @@
 .pagination {
   color: var(--gray-3);
   display: flex;
+  justify-content: center;
   margin: 3rem 0;  
 }
 
 // Pagination items can be `span`s or `a`s
 .pagination-item {
   border: 2px solid var(--border-color);
-  border-radius: .25rem;
+  border-radius: 3rem;
   font-family: var(--secondary-font-family-semibold);
   padding: 1rem;
   text-align: center;
   text-decoration: none;
   width: 50%;
 
-  &:only-child {
-    width: 100%;
-  }
+  //&:only-child {
+  //  width: 100%;
+  //}
 
   &:first-child:not(:last-child) {
     margin-right: .5rem;
