Refactor with flexbox

--- a/_includes/social-channels.html
+++ b/_includes/social-channels.html
@@ -1,32 +1,30 @@
 <div class="social">
-   <ul>
-    <li>
-      <a href="{{ site.author.twitter }}" rel="external">
-        <div class="icon-social icon-twitter">
-          <div class="sr-hidden">Follow me on Twitter</div>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="{{ site.author.linkedin }}" rel="external">
-        <div class="icon-social icon-linkedin">
-          <div class="sr-hidden">Follow me on LinkedIn</div>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="{{ site.author.github }}" rel="external">
-        <div class="icon-social icon-github">
-          <div class="sr-hidden">Follow me on GitHub</div>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="{{ site.author.codepen }}" rel="external">
-        <div class="icon-social icon-codepen">
-          <div class="sr-hidden">Follow me on CodePen</div>
-        </div>
-      </a>
-    </li>
-  </ul>
+  <div class="chan">
+    <a href="{{ site.author.twitter }}" rel="external">
+      <div class="icon-social icon-twitter">
+        <div class="sr-hidden">Follow me on Twitter</div>
+      </div>
+    </a>
+  </div>
+  <div class="chan">
+    <a href="{{ site.author.linkedin }}" rel="external">
+      <div class="icon-social icon-linkedin">
+        <div class="sr-hidden">Follow me on LinkedIn</div>
+      </div>
+    </a>
+  </div>
+  <div class="chan">
+    <a href="{{ site.author.github }}" rel="external">
+      <div class="icon-social icon-github">
+        <div class="sr-hidden">Follow me on GitHub</div>
+      </div>
+    </a>
+  </div>
+  <div class="chan">
+    <a href="{{ site.author.codepen }}" rel="external">
+      <div class="icon-social icon-codepen">
+        <div class="sr-hidden">Follow me on CodePen</div>
+      </div>
+    </a>
+  </div>
 </div>
