--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -110,6 +110,7 @@ figure {
 
 .icon,
 .icon-social {
+  background-position: center;
   background-repeat: no-repeat;
   background-size: 30px;
   height: 30px;
@@ -164,9 +165,6 @@ figure {
 
 .icon-linkedin {
   background-image: url("data:image/svg+xml,%3Csvg width='28' height='32' viewBox='0 0 28 32' fill='%23515151' xmlns='http://www.w3.org/2000/svg' aria-label='LinkedIn'%3E%3Cpath d='M4.224 25.248h4.128v-12.384h-4.128v12.384zM8.64 9.024q-0.032-0.928-0.672-1.536t-1.632-0.608-1.696 0.608-0.672 1.536q0 0.928 0.64 1.536t1.664 0.608v0q1.056 0 1.696-0.608t0.672-1.536zM19.072 25.248h4.128v-7.104q0-2.752-1.312-4.16t-3.424-1.408q-2.432 0-3.744 2.080h0.032v-1.792h-4.128q0.064 1.184 0 12.384h4.128v-6.944q0-0.672 0.128-0.992 0.256-0.608 0.8-1.056t1.312-0.448q2.080 0 2.080 2.816v6.624zM27.424 7.424v17.152q0 2.112-1.504 3.616t-3.648 1.536h-17.12q-2.144 0-3.648-1.536t-1.504-3.616v-17.152q0-2.112 1.504-3.616t3.648-1.536h17.12q2.144 0 3.648 1.536t1.504 3.616z'%3E%3C/path%3E%3C/svg%3E");
-  background-size: 28px;
-  height: 32px;
-  width: 28px;
 
   &:hover {
     background-image: url("data:image/svg+xml,%3Csvg width='28' height='32' viewBox='0 0 28 32' fill='%230074d9' xmlns='http://www.w3.org/2000/svg' aria-label='LinkedIn'%3E%3Cpath d='M4.224 25.248h4.128v-12.384h-4.128v12.384zM8.64 9.024q-0.032-0.928-0.672-1.536t-1.632-0.608-1.696 0.608-0.672 1.536q0 0.928 0.64 1.536t1.664 0.608v0q1.056 0 1.696-0.608t0.672-1.536zM19.072 25.248h4.128v-7.104q0-2.752-1.312-4.16t-3.424-1.408q-2.432 0-3.744 2.080h0.032v-1.792h-4.128q0.064 1.184 0 12.384h4.128v-6.944q0-0.672 0.128-0.992 0.256-0.608 0.8-1.056t1.312-0.448q2.080 0 2.080 2.816v6.624zM27.424 7.424v17.152q0 2.112-1.504 3.616t-3.648 1.536h-17.12q-2.144 0-3.648-1.536t-1.504-3.616v-17.152q0-2.112 1.504-3.616t3.648-1.536h17.12q2.144 0 3.648 1.536t1.504 3.616z'%3E%3C/path%3E%3C/svg%3E");
