--- a/_sass/_share.scss
+++ b/_sass/_share.scss
@@ -2,27 +2,21 @@
 //
 // Styles for social share buttons.
 .social {
+  margin-bottom: 2rem;
   margin-top: 2rem;
   
-  ul {
-    display: inline-block;
-    margin-bottom: 2rem;
-    padding: 0;
-
-    li {
-      display: inline-block;
-      list-style: none;
-      margin: 0 1rem;
-      vertical-align: middle;
-    }
-
-    @media only screen and (max-width: $large-breakpoint) {
-      margin-bottom: 1rem;
-    }
+  .chan {
+    display: inline-flex;
+    justify-content: center;
+    margin: 0 1rem;
   }
-
+  
   a {
-     color: inherit;
+    color: inherit;
+  }
+  
+  @media only screen and (max-width: $large-breakpoint) {
+    margin-bottom: 1rem;
   }
 }
 
