--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -71,6 +71,7 @@ nav {
       left: 1rem;
       overflow: visible;
       position: absolute;
+      text-decoration: none;
       top: 1rem;
     }
   }
