--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -41,7 +41,7 @@ $large-breakpoint: 38rem;
   --flat-black: #0b0c0c;
   --forest-green: #1e8400;
   --plum: #905;
-  --sky-blue: #f9fbff;
+  --sky-blue: #e7f0fd;
   --white: #fff;
   --white-gray: #fcfcfc;
   --white-sand: #e5e5e5;
