--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -32,6 +32,8 @@ body {
 // No `:visited` state is required by default (browsers will use `a`)
 a {
   color: var(--link-color);
+  text-decoration-thickness: .1125rem;
+  text-underline-offset: 1.25px;
   transition: color ease .2s;
 
   code,
