--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -156,3 +156,10 @@ em {
 //   font-size: .9rem;
 //   margin-top: 2rem;
 // }
+
+.example {
+  display: grid;
+  transition: all .5s;
+  user-select: none;
+  background: linear-gradient(to bottom, white, black);
+}
