Update variable naming

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,8 +11,8 @@ body {
 }
 
 html {
-  font-size: var(--root-font-size);
-  line-height: var(--root-line-height);
+  font-size: var(--font-size-root);
+  line-height: var(--font-line-height);
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
   
