--- a/_sass/_prism.scss
+++ b/_sass/_prism.scss
@@ -12,7 +12,7 @@ pre[class*="language-"] {
   font-family: var(--font-tertiary-regular);
   font-size: .9rem;
   hyphens: none;
-  line-height: var(--root-line-height) ;
+  line-height: var(--font-line-height) ;
   tab-size: 4;
   text-align: left;
   text-shadow: 0 1px var(--white);
