--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
       <h2 class="post-title">{{ page.title }}</h2>
       {% include post-metadata.html %}
     </header>
-    <div>
+    <div class="flow">
       {{ content }}
     </div>
     <footer class="post-footer">
