--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -26,16 +26,28 @@ $large-breakpoint: 36rem;
   --font-line-height: 1.5;
   --large-breakpoint: #{$large-breakpoint};
 
-  --gray-m: #767676;
-  --gray-1: #f9f9f9;
-  --gray-2: #cfcfcf;
+  --gray-m: #767676; //switch to --gray-4
+  --gray-1: #f9f9f9; //switch to --color-shades-light: #f8f9fa;
   --gray-3: #68778d;
-  --gray-4: #717171;
+  //--gray-4: #717171;
   --gray-5: #444;
+
+  --color-primary: #0b0c0c;
+  --flat-black: #0b0c0c;
+
+  --color-shades-primary: #292930;
   --gray-6: #292930;
 
+  --color-shades-primary-glare: ;
+  --color-shades-primary-bright: ;
+
+  --color-shades-secondary: ;
+  --color-shades-secondary-glare: ;
+  --color-shades-secondary-bright: ;
+
+
+
   --blue: #0074d9;
-  --flat-black: #0b0c0c;
   --sky-blue: #e7f0fd;
   --white-sand: #e5e5e5;
 
