--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -29,7 +29,7 @@
     margin: 0 auto 1.5rem;
     width: 65%;
   
-    @media only screen and (max-width: $large-breakpoint) {
+    @media (max-width: $large-breakpoint) {
       width: 85%;
     }
   }
@@ -43,6 +43,9 @@
 }
 
 .post-meta {
+  //align-items: center;
+  //display: flex;
+  //padding-bottom: 1rem;
   margin-bottom: 1rem;
 
   a {
@@ -57,7 +60,7 @@
     margin-right: 1rem;
 
     &:not(:last-child) {
-      @media only screen and (max-width: $large-breakpoint) {
+      @media (max-width: $large-breakpoint) {
         margin-bottom: .75rem;          
       }
     }
