--- a/_sass/_prism.scss
+++ b/_sass/_prism.scss
@@ -8,7 +8,7 @@
 /*
 code[class*="language-"],
 pre[class*="language-"] {
-  color: var(--flat-black);
+  color: var(--color-primary);
   font-family: var(--font-tertiary-regular);
   font-size: .9rem;
   hyphens: none;
@@ -90,7 +90,6 @@ code {
   word-spacing: normal;
   word-break: normal;
   word-wrap: normal;
-  //font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace
 }
 
 pre > code {
@@ -101,27 +100,27 @@ pre > code {
   -webkit-overflow-scrolling: touch;
 }
 
-div.prism-show-language {
-  position: relative;
+// div.prism-show-language {
+//   position: relative;
  
-  .prism-show-language-label {
-    background-color: var(--color-stroke);
-    border-radius: 0 .25rem;
-    bottom: auto;
-    box-shadow: none;
-    color: var(--flat-black);
-    display: inline-block;
-    font-family: var(--font-secondary-semi-bold);
-    font-size: .725rem;
-    height: auto;
-    left: auto;
-    padding: 0 0.5rem;
-    position: absolute;
-    right: 0;
-    text-shadow: none;
-    top: 0;
-    transform: none;
-    width: auto;
-    z-index: 1;
-  }
-}
+//   .prism-show-language-label {
+//     background-color: var(--color-stroke);
+//     border-radius: 0 .25rem;
+//     bottom: auto;
+//     box-shadow: none;
+//     color: var(--color-primary);
+//     display: inline-block;
+//     font-family: var(--font-secondary-semi-bold);
+//     font-size: .725rem;
+//     height: auto;
+//     left: auto;
+//     padding: 0 0.5rem;
+//     position: absolute;
+//     right: 0;
+//     text-shadow: none;
+//     top: 0;
+//     transform: none;
+//     width: auto;
+//     z-index: 1;
+//   }
+// }
