--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -79,7 +79,7 @@ blockquote {
   &.message {
     background-color: var(--color-shades-primary-bright);
     border-radius: .25rem;
-    color:var(--color-state-info);
+    color:var(--color-state-info-text);
     font-family: var(--font-secondary-semi-bold);
     font-size: .9rem;
     margin: 1.5rem 0;
