--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="page" tabindex="0">
+<div class="page">
   <h2 class="page-title">{{ page.title }}</h2>
   {{ content }}
 </div>
