--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <article>
-  <div class="post" tabindex="0">
+  <div class="post">
     <header class="post-header">
       <h2 class="post-title">{{ page.title }}</h2>
       {% include post-metadata.html %}
