--- a/_includes/social-channels.html
+++ b/_includes/social-channels.html
@@ -1,26 +1,26 @@
-<div class="social">
-  <div class="chan">
+<div class="social-media">
+  <div class="item">
     <a href="{{ site.author.twitter }}" rel="external">
       <div class="icon-social icon-twitter">
         <div class="sr-hidden">Follow me on Twitter</div>
       </div>
     </a>
   </div>
-  <div class="chan">
+  <div class="item">
     <a href="{{ site.author.linkedin }}" rel="external">
       <div class="icon-social icon-linkedin">
         <div class="sr-hidden">Follow me on LinkedIn</div>
       </div>
     </a>
   </div>
-  <div class="chan">
+  <div class="item">
     <a href="{{ site.author.github }}" rel="external">
       <div class="icon-social icon-github">
         <div class="sr-hidden">Follow me on GitHub</div>
       </div>
     </a>
   </div>
-  <div class="chan">
+  <div class="item">
     <a href="{{ site.author.codepen }}" rel="external">
       <div class="icon-social icon-codepen">
         <div class="sr-hidden">Follow me on CodePen</div>
